--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,71 +1,80 @@
 .header {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 80px;
-  background-color: #fff;
-  z-index: 9999;
-  border-bottom: 1px solid #ddd;
-  .inner {
-    height: 100%;
-    .nav {
-      height: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .header-logo {
-        font-family: "Poppins", sans-serif;
-        font-size: 22px;
-        color: #131313;
-        font-weight: 600;
-        cursor: pointer;
-        white-space: nowrap;
-      }
-      .gnb {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #fff;
+    z-index: 9999;
+    // border-bottom: 1px solid #ddd;
+    background-color: greenyellow;
+    .inner {
         height: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        li {
-          cursor: pointer;
-          padding: 0 25px;
-          span {
-            position: relative;
-            font-family: "Poppins", sans-serif;
-            font-size: 18px;
-            color: #131313;
-            text-transform: uppercase;
-            font-weight: 600;
-            transition: color 0.5s;
-            &::after {
-              content: "";
-              position: absolute;
-              left: 0;
-              bottom: 0;
-              width: 0%;
-              height: 3px;
-              background-color: #131313;
-              transition: width 0.5s;
+
+        .nav {
+            height: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .header-logo {
+                font-family: "Poppins", sans-serif;
+                font-size: 22px;
+                color: #131313;
+                font-weight: 600;
+                cursor: pointer;
+                white-space: nowrap;
+                img {
+                    width: 80px;
+                }
             }
-          }
-          &:hover span {
-            color: #000;
-            &::after {
-              width: 100%;
+            .gnb {
+                height: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                li {
+                    height: 40px;
+                    cursor: pointer;
+                    line-height: 2.5;
+                    padding: 0 20px;
+                    background-color: white;
+                    span {
+                        position: relative;
+                        font-family: "Poppins", sans-serif;
+                        font-size: 18px;
+                        color: #131313;
+                        text-transform: uppercase;
+                        font-weight: 700;
+                        color: #db5e5e;
+                        transition: color 0.5s;
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            left: 0;
+                            bottom: 0;
+                            width: 0%;
+                            height: 2px;
+                            background-color: #131313;
+                            transition: width 0.5s;
+                        }
+                    }
+                    &:hover span {
+                        color: #000;
+                        &::after {
+                            width: 100%;
+                        }
+                    }
+                }
             }
-          }
+            .mobile-bt {
+                position: absolute;
+                right: 30px;
+                top: 30px;
+                display: none;
+                cursor: pointer;
+            }
         }
-      }
-      .mobile-bt {
-        position: absolute;
-        right: 30px;
-        top: 30px;
-        display: none;
-        cursor: pointer;
-      }
     }
-  }
 }
 
 // 데스크탑
@@ -73,18 +82,18 @@
 }
 // 타블렛
 @media screen and (max-width: $tablet) {
-  .gnb {
-    li {
-      padding: 0 20px !important;
+    .gnb {
+        li {
+            padding: 0 20px !important;
+        }
     }
-  }
 }
 // 모바일
 @media screen and (max-width: $mp) {
-  .gnb {
-    display: none !important;
-  }
-  .mobile-bt {
-    display: block !important;
-  }
+    .gnb {
+        display: none !important;
+    }
+    .mobile-bt {
+        display: block !important;
+    }
 }
